chore: add Dockerized backend setup (PostgreSQL + Spring Boot)
- Created multi-stage Dockerfile for backend with JDK 17
  - Stage 1: Build with Maven wrapper (./mvnw clean package -DskipTests)
  - Stage 2: Run with JRE and java -jar
- Updated docker-compose.yml with two services:
  - db: PostgreSQL 15-alpine with volume and init script
  - backend: Spring Boot built from Dockerfile, depends on db health check
- Exposed ports: 5432 (PostgreSQL) and 8080 (backend)
- Added network configuration for inter-service communication
- Updated .gitignore to exclude local Docker override files
- Verified: Both containers start successfully and backend connects to database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
-  postgres:
-    image: postgres:15-alpine
+  db:
+    image: postgres:15
     container_name: quanlydancu-postgres
     environment:
       POSTGRES_DB: QuanLyDanCu
@@ -19,6 +17,30 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - app-network
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: quanlydancu-backend
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/QuanLyDanCu
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: 123456
+    ports:
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   postgres_data:
